<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/display_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/female"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:textSize="18dp" />
            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sridhar"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:textSize="18dp"                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:textSize="18dp"

                />
            <TextView
                android:id="@+id/display_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:textSize="18dp"

                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>